implement endpoint to add tag to a note and get all tag
